clang/test/BSC/Positive/Method/Union/union_instance_function_multi_declaration/union_instance_function_multi_declaration.cbs
// RUN: %clang_cc1 -verify %s
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: FileCheck --input-file=%t-rw.c %s
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int union SimpleUnion::getA(union SimpleUnion* this);
int union SimpleUnion::getA(union SimpleUnion* this);

int main() {
  union SimpleUnion u = {.ui = 1};
  u.getA();
  return 0;
}

int union SimpleUnion::getA(union SimpleUnion * this) { 
  return this->ui;
}

// CHECK: int union_SimpleUnion_getA(union SimpleUnion *this);
// CHECK-EMPTY:
// CHECK-NEXT: int union_SimpleUnion_getA(union SimpleUnion *this);
// CHECK-EMPTY:
// CHECK-NEXT:int main(void) {
// CHECK-NEXT:   union SimpleUnion u = {.ui = 1};
// CHECK-NEXT:   union_SimpleUnion_getA(&u);
// CHECK-NEXT:   return 0;
// CHECK-NEXT: }
// CHECK-EMPTY:
// CHECK-NEXT: int union_SimpleUnion_getA(union SimpleUnion *this) {
// CHECK-NEXT:   return this->ui;
// CHECK-NEXT: }

